--- a/templates/content.html
+++ b/templates/content.html
@@ -7,13 +7,21 @@
     display: block;
     margin: 0 auto;
 }
-#content-image {
+#content-image-container {
   text-align: center;
-  margin: 35px auto;
+  margin: 30px auto;
+}
+.content-image {
+  width: 300px;
 }
 #ad {
     text-align: center;
     margin: 30px auto;
+}
+@media screen and (max-width: 400px) {
+.content-image {
+  width: 70vw;
+}
 }
 </style>
 {% endblock %}
@@ -25,8 +33,12 @@
         <h3 class="page-section__title">{{content.title}}</h3>
         <img class="page-section__title-style" src="{% static 'assets/images/title-style.png' %}" alt="">
         {% if content.image %}
+        <div id="content-image-container">
+          <img src="{{content.image.url}}" class="content-image" alt="">
+        </div>
+        {% elif content.image_url %}
         <div id="content-image">
-          <img src="{{content.image.url}}" width="400" alt="">
+          <img src="{{content.image_url}}" class="content-image" alt="">
         </div>
         {% endif %}
         <div style="font-size: 16px;">{{content.content|safe}}</div><br><br>
