--- a/templates/home.html
+++ b/templates/home.html
@@ -313,7 +313,7 @@
   {% endif %}
 
     {% if contents %}
-    <section class="blog" id="blog">
+    <section class="blog" id="contents">
     <div class="container">
       <div class="page-section">
         <h2 class="page-section__title">SOME OF OUR CONTENTS</h2>
