Deployment and heroku ready commit

--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
           <div class="row gutters-80">
             <div class="col-md-4">
               <div class="about__image">
-                <img src="{{info.my_image.url}}" alt="" width="300">
+                <img src="{{info.my_image.url}}" alt="" width="300" style="box-shadow: 5px 5px 7px rgb(151, 151, 151);">
               </div>
             </div>
             <div class="col-md-8 about__content">
