--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,9 @@
             <span class="icon-bar"></span> 
           </button>
           {% if setting.logo %}
-          <img src="{{setting.logo.url}}" alt="Logo" width="120">
+          <img src="{{setting.logo.url}}" alt="LOGO" style="color: #fff;" width="120">
           {% else %}
-          <a class="navbar-brand" href="#" style="text-transform: capitalize;">{{info.first_name}}</a>
+          <a class="navbar-brand" href="#" style="text-transform: uppercase; font-size: 25px; color: #fff;">{{info.first_name}}</a>
           {% endif %}
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
