--- a/templates/home.html
+++ b/templates/home.html
@@ -195,13 +195,16 @@
     </div>
   </section>
 
+  {% if testimonials %}
   <section class="slider slider--bg" id="testimonial">
     <div id="myCarousel" class="carousel container slide" data-ride="carousel">
+      <!--
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
+      -->
 
       
       <div class="carousel-inner">
@@ -235,6 +238,7 @@
       </div>
     </div>
   </section>
+  {% endif %}
 
   {% if teams %}
   <section class="team" id="team">
