--- a/templates/base.html
+++ b/templates/base.html
@@ -62,26 +62,26 @@
       </div>
       <div class="social-icon pull-right">
         <ul style="color: #fff;">
-          {% if info.whatsapp %}
-          <li><a href="{{info.whatsapp}}" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
+          {% if info.whatsapp_link %}
+          <li><a href="{{info.whatsapp_link}}" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
           {% endif %}
-          {% if info.facebook %}
-          <li><a href="{{info.facebook}}" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+          {% if info.facebook_link %}
+          <li><a href="{{info.facebook_link}}" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
           {% endif %}
-          {% if info.twitter %}
-          <li><a href="{{info.twitter}}" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+          {% if info.twitter_link %}
+          <li><a href="{{info.twitter_link}}" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
           {% endif %}
-          {% if info.instagram %}
-          <li><a href="{{info.instagram}}" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
+          {% if info.instagram_link %}
+          <li><a href="{{info.instagram_link}}" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
           {% endif %}
-          {% if info.linked_in %}
-          <li><a href="{{info.linked_in}}" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          {% if info.linkedin_link %}
+          <li><a href="{{info.linkedin_link}}" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
           {% endif %}
-          {% if info.youtube %}
-          <li><a href="{{info.youtube}}" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+          {% if info.youtube_link %}
+          <li><a href="{{info.youtube_link}}" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
           {% endif %}
-          {% if info.pin_interest %}
-          <li><a href="{{info.pin_interest}}" target="_blank"><i class="fab fa-pinterest fa-2x"></i></a></li>
+          {% if info.pin_interest_link %}
+          <li><a href="{{info.pin_interest_link}}" target="_blank"><i class="fab fa-pinterest fa-2x"></i></a></li>
           {% endif %}
         </ul>
       </div>
@@ -106,29 +106,29 @@
     <div class="container text-center">
       <div class="social-icon">
         <ul>
-          {% if info.whatsapp %}
-          <li><a href="{{info.whatsapp}}" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
+          {% if info.whatsapp_link %}
+          <li><a href="{{info.whatsapp_link}}" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
           {% endif %}
-          {% if info.facebook %}
-          <li><a href="{{info.facebook}}" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+          {% if info.facebook_link %}
+          <li><a href="{{info.facebook_link}}" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
           {% endif %}
-          {% if info.twitter %}
-          <li><a href="{{info.twitter}}" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+          {% if info.twitter_link %}
+          <li><a href="{{info.twitter_link}}" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
           {% endif %}
-          {% if info.instagram %}
-          <li><a href="{{info.instagram}}" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
+          {% if info.instagram_link %}
+          <li><a href="{{info.instagram_link}}" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
           {% endif %}
-          {% if info.linked_in %}
-          <li><a href="{{info.linked_in}}" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          {% if info.linkedin_link %}
+          <li><a href="{{info.linkedin_link}}" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
           {% endif %}
-          {% if info.tiktok %}
-          <li><a href="{{info.tiktok}}" target="_blank"><i class="fab fa-tiktok fa-2x"></i></a></li>
+          {% if info.tiktok_link %}
+          <li><a href="{{info.tiktok_link}}" target="_blank"><i class="fab fa-tiktok fa-2x"></i></a></li>
           {% endif %}
-          {% if info.youtube %}
-          <li><a href="{{info.youtube}}" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+          {% if info.youtube_link %}
+          <li><a href="{{info.youtube_link}}" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
           {% endif %}
-          {% if info.pin_interest %}
-          <li><a href="{{info.pin_interest}}" target="_blank"><i class="fab fa-pinterest fa-2x"></i></a></li>
+          {% if info.pin_interest_link %}
+          <li><a href="{{info.pin_interest_link}}" target="_blank"><i class="fab fa-pinterest fa-2x"></i></a></li>
           {% endif %}
         </ul>
       </div>
