--- a/templates/home.html
+++ b/templates/home.html
@@ -290,17 +290,17 @@
                     <hr style="border: 0;border-bottom: 1px solid #ECEFF1;display:block;padding-top: 45px;">
                     <div class="social-icons">
                       <ul>
-                        {% if team.whatsapp %}
-                        <li><a href="{{team.whatsapp}}" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                        {% if team.whatsapp_link %}
+                        <li><a href="{{team.whatsapp_link}}" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                         {% endif %}
-                        {% if team.facebook %}
-                        <li><a href="{{team.facebook}}" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        {% if team.facebook_link %}
+                        <li><a href="{{team.facebook_link}}" target="_blank"><i class="fab fa-facebook"></i></a></li>
                         {% endif %}
-                        {% if team.twitter %}
-                        <li><a href="{{team.twitter}}" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        {% if team.twitter_link %}
+                        <li><a href="{{team.twitter_link}}" target="_blank"><i class="fab fa-twitter"></i></a></li>
                         {% endif %}
-                        {% if team.instagram %}
-                        <li><a href="{{team.instagram}}" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        {% if team.instagram_link %}
+                        <li><a href="{{team.instagram_link}}" target="_blank"><i class="fab fa-instagram"></i></a></li>
                         {% endif %}
                       </ul>
                     </div>
